--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 remote_theme: daattali/beautiful-jekyll@6.0.1
+
+title: "Aditya Somasundaram's website"
+
+descripition: Listen to the rant of Aditya Somasundaram.
+
+author: Aditya Somasundaram
