--- a/_config.yml
+++ b/_config.yml
@@ -49,62 +49,62 @@ paginate: 5
 kramdown:
   input: GFM
 
-# Default YAML values (more information on Jekyll's site)
-defaults:
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-      comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
-      readtime: true # add estimated reading time on all blog posts
-  -
-    scope:
-      path: "" # all files
-    values:
-      layout: "page"
-      show-avatar: true
+# # Default YAML values (more information on Jekyll's site)
+# defaults:
+#   -
+#     scope:
+#       path: ""
+#       type: "posts"
+#     values:
+#       layout: "post"
+#       comments: true  # add comments to all blog posts
+#       social-share: true # add social media sharing buttons to all blog posts
+#       readtime: true # add estimated reading time on all blog posts
+#   -
+#     scope:
+#       path: "" # all files
+#     values:
+#       layout: "page"
+#       show-avatar: true
 
-#Meta data for your Posts
-metadata:
-  _posts:
-    - name: "layout"
-      field:
-        element: "hidden"
-        value: "post"
-    - name: "title"
-      field:
-        element: "text"
-        label: "Post title"
-        placeholder: "Title"
-        alterable: true
-    - name: "subtitle"
-      field:
-        element: "textarea"
-        label: "Subtitle"
-        placeholder: "A description of your post."
-        alterable: true
-    - name: "date"
-      field:
-        element: "text"
-        label: "Date"
-        help: "Enter date of post."
-        placeholder: "yyyy-mm-dd"
-        alterable: true
-    - name: "image"
-      field:
-        element: "text"
-        label: "Image"
-        help: "Add a thumbnail image to your post."
-        placeholder: "Thumbnail"
-        alterable: true
-    - name: "published"
-      field:
-        element: "checkbox"
-        label: "Publish"
-        help: "Check to publish post, uncheck to hide."
+# #Meta data for your Posts
+# metadata:
+#   _posts:
+#     - name: "layout"
+#       field:
+#         element: "hidden"
+#         value: "post"
+#     - name: "title"
+#       field:
+#         element: "text"
+#         label: "Post title"
+#         placeholder: "Title"
+#         alterable: true
+#     - name: "subtitle"
+#       field:
+#         element: "textarea"
+#         label: "Subtitle"
+#         placeholder: "A description of your post."
+#         alterable: true
+#     - name: "date"
+#       field:
+#         element: "text"
+#         label: "Date"
+#         help: "Enter date of post."
+#         placeholder: "yyyy-mm-dd"
+#         alterable: true
+#     - name: "image"
+#       field:
+#         element: "text"
+#         label: "Image"
+#         help: "Add a thumbnail image to your post."
+#         placeholder: "Thumbnail"
+#         alterable: true
+#     - name: "published"
+#       field:
+#         element: "checkbox"
+#         label: "Publish"
+#         help: "Check to publish post, uncheck to hide."
 
 # Exclude these files from production site
 exclude:
