--- a/_config.yml
+++ b/_config.yml
@@ -107,18 +107,18 @@ kramdown:
 #         help: "Check to publish post, uncheck to hide."
 
 # Exclude these files from production site
-exclude:
-  - CHANGELOG.md
-  - CNAME
-  - Dockerfile
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - Vagrantfile
-  - docs/
+# exclude:
+#   - CHANGELOG.md
+#   - CNAME
+#   - Dockerfile
+#   - Gemfile
+#   - Gemfile.lock
+#   - LICENSE
+#   - README.md
+#   - Vagrantfile
+#   - docs/
 
-paginate_path: "/blog/page:num/"
+# paginate_path: "/blog/page:num/"
 
 plugins:
   - jekyll-paginate
