--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,9 @@ paginate: 5
 kramdown:
   input: GFM
 
+# Fill in your Google Analytics gtag.js ID to track your website using gtag
+gtag: "G-L0E45BRZPT"
+
 # # Default YAML values (more information on Jekyll's site)
 # defaults:
 #   -
@@ -111,18 +114,18 @@ kramdown:
 #         help: "Check to publish post, uncheck to hide."
 
 # Exclude these files from production site
-# exclude:
-#   - CHANGELOG.md
-#   - CNAME
-#   - Dockerfile
-#   - Gemfile
-#   - Gemfile.lock
-#   - LICENSE
-#   - README.md
-#   - Vagrantfile
-#   - docs/
+exclude:
+  - CHANGELOG.md
+  - CNAME
+  - Dockerfile
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - Vagrantfile
+  - docs/
 
-# paginate_path: "/blog/page:num/"
+paginate_path: "/blog/page:num/"
 
 plugins:
   - jekyll-paginate
