--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ footer-link-col: "#404040"
 social-network-links:
   email: "aditsom7@gmail.com"
   google-scholar: citations?user=wvh68FUAAAAJ&hl=en
+  linkedin: adityasomasundaram
 
 # url-pretty: 
 
