--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ navbar-links:
   About Me: "about"
   Publications: "pubs"
   Current Work: "rant"
+  Résumé: "https://drive.google.com/file/d/1esr-DKOfSJwQSoj479uBCJ6orS97VFt7/view?usp=drive_link"
 
 title-img: "https://aditsom.github.io/AdityaSomasundaram/assets/img/dp_circle.png"
 
