--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ navbar-links:
   About Me: "about"
   Publications: "pubs"
   Current Work: "rant"
+  Chess: "chess"
   Résumé: "https://drive.google.com/file/d/1kS2t9ncz68hWYU4_X2Ua76Jm9Qlu0LRr/view?usp=sharing"
 
 title-img: "https://aditsom.github.io/AdityaSomasundaram/assets/img/dp_circle.png"
