--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author: Aditya Somasundaram
 navbar-links:
   About Me: "about"
   Publications: "pubs"
-  Current Work: "rant"
+  # Current Work: "rant"
   Chess: "chess"
   Résumé: "https://drive.google.com/file/d/1kS2t9ncz68hWYU4_X2Ua76Jm9Qlu0LRr/view?usp=sharing"
 
