--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ social-network-links:
   email: "aditsom7@gmail.com"
   google-scholar: citations?user=wvh68FUAAAAJ&hl=en
   linkedin: adityasomasundaram
+  twitter: aditsom7
 
 # url-pretty: 
 
